Some changes in the html pages

--- a/src/qualification-work.html
+++ b/src/qualification-work.html
@@ -51,7 +51,7 @@
             <div class="imgbox">
                 <img class="center-fit" src='../docs/himal.jpg'>
                 
-                <p>I am Amrit Sagar Khanal, a junior software developer currently enrolled at Coder Academy.</br> 
+                <p>am Amrit Sagar Khanal, a junior software developer currently enrolled at Coder Academy.</br> 
                     I am a Nepalese born in Kathmandu, just in front of the Himalayas. I completed my education upto Bachelor's degree in Kathmandu and then migrated to australia 6 years ago. I love to programme in different languages like Ruby, Python, html- CSS but I started my coding journey with c programming back in my University days.
                                                         You can view my coding projects in my Github account whose link can be found on the right side of this page. Also, I can be contacted via twitter, LinkedIn and my email.</br>Amrit Sagar Khanal</p>
                                               
