--- a/src/Contacts.html
+++ b/src/Contacts.html
@@ -59,7 +59,7 @@
                   </div>
              </div>   
                      </div>       -->
-                    <div class="email">amritsk1@yahoo.com</a>
+                    <div class="email"><h3>amritsk1@yahoo.com</h3>
                     </div>
                 
                     <div class="contact"><a href="https://www.twitter.com/AmritSKhanal1">Twitter</a>
