--- a/src/personal-details.html
+++ b/src/personal-details.html
@@ -71,7 +71,7 @@
   </div>
   <div class="column" style="background-color:#bbb;">
     <h4>BACKGROUND</h4>
-    <p>My BACKGROUND</p>
+    <p>I am an electronics and communication enginer who graduated from Tribhuvan University. My otehr</p>
   </div>
 </div>
              
