--- a/src/Contacts.html
+++ b/src/Contacts.html
@@ -44,7 +44,7 @@
                         <ul>
                             <li><a href="../index.html">Home</a></li>
                             <li><a href="personal-details.html">About</a></li>
-                            <li><a href="qualification-work.html">Qualifications/Experience</a></li>
+                            <li><a href="blogs">Blogs</a></li>
                             <li><a href="projects.html">Skills/Projects</a></li>
                             <li><a href="contacts.html">Contact</a></li>
                         </ul>
