--- a/src/projects.html
+++ b/src/projects.html
@@ -39,11 +39,11 @@
               
                   <nav>
                         <ul>
-                            <li><a href="../index.html">Home</a></li>
-                            <li><a href="personal-details.html">About</a></li>
-                            <li><a href="qualification-work.html">Qualifications/Experience</a></li>
-                            <li><a href="projects.html">Skills/Projects</a></li>
-                            <li><a href="contacts.html">Contact</a></li>
+                                <li><a href="../index.html">Home</a></li>
+                                <li><a href="personal-details.html">About</a></li>
+                                <li><a href="blogs.html">Blogs</a></li>
+                                <li><a href="projects.html">Skills/Projects</a></li>
+                                <li><a href="contacts.html">Contact</a></li>
                         </ul>
                     </nav>
             
@@ -79,13 +79,14 @@
                   <!-- </div>
              </div>   
                      </div>       -->
-                     <h6><h6>My projects can be viewed at Github as per the link below:</h6></br>
+                    </br>
+                     <h6>My projects can be viewed at Github as per the link below:</h6>
                     <div class="contact"><a href="https://www.github.com/amrithub">My GitHub</a>
                     </div>
                 </br>
-                     <h6>As a junior programmer, my first project is a terminal application  "Quiz" and this application allows </br>
-                        a user to test his/her ability in ruby programming via multiple choice questions.The application has two </br>
-                        modes: practice mode and tournament mode. Some  screenshots of the terminal application has been presented </br>
+                     <h6>As a junior programmer, my first project is a terminal application  "Quiz" and this application allows
+                        a user to test his/her ability</br> in ruby programming via multiple choice questions.The application has two
+                        modes: practice mode and tournament mode. Some  </br>screenshots of the terminal application has been presented 
                         here.
                         The project can be viewed and run as per the link below:</h6>
                         <div class="contact"><a href="https://www.github.com/amrithub/t1project">Quiz</a>
