--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <!-- <link rel="stylesheet" href="src/style.css" /> -->
-        <link rel="stylesheet" href="styles.css" integrity= "sha512-fr6ZwiyJbv2kE9/q8DvoEuNxS9Ocib5eEzx0d5g9DGxb1ohP6xcLhEkpAKYvg20U3zbeHl/oHFjChHtqD6Ak/Q==" crossorigin="anonymous"/>
+        <link rel="stylesheet" href="styles.css" integrityy="sha512-fr6ZwiyJbv2kE9/q8DvoEuNxS9Ocib5eEzx0d5g9DGxb1ohP6xcLhEkpAKYvg20U3zbeHl/oHFjChHtqD6Ak/Q=="/>
         <STYLE>A {text-decoration: none;} </STYLE>
         
 </head>
