--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <li><a href="./src/personal-details.html">About</a></li>
                             <li><a href="./src/blogs.html">Blogs</a></li>
                             <li><a href="./src/projects.html">Skills/Projects</a></li>
-                            <li><a href="./src/contacts.html">Contact</a></li>
+                            <li><a href="./src/Contacts.html">Contact</a></li>
                         </ul>
                     </nav>
             
