--- a/src/Contacts.html
+++ b/src/Contacts.html
@@ -44,7 +44,7 @@
                             <li><a href="personal-details.html">About</a></li>
                             <li><a href="blogs.html">Blogs</a></li>
                             <li><a href="projects.html">Skills/Projects</a></li>
-                            <li><a href="contacts.html">Contact</a></li>
+                            <li><a href="Contacts.html">Contact</a></li>
                         </ul>
                     </nav>
             
