--- a/src/personal-details.html
+++ b/src/personal-details.html
@@ -40,7 +40,8 @@
                   <nav>
                         <ul>
                                 <li><a href="../index.html">Home</a></li>
-                                <li><a href="personal-details.html">About</a></li>
+                                <!-- <li><a href="personal-details.html">About</a></li> -->
+                                <li><a href="../docs/cv.pdf">Resume</a></li>
                                 <li><a href="blogs.html">Blogs</a></li>
                                 <li><a href="projects.html">Skills/Projects</a></li>
                                 <li><a href="contacts.html">Contact</a></li>
