Minor changes in the pages

--- a/src/personal-details.html
+++ b/src/personal-details.html
@@ -63,7 +63,7 @@
                                                <!-- <h3>Two Equal Columns</h3> -->
 
 <div class="row">
-  <div class="column" style="background-color:#aaa;">
+  <div class="column" style="background-color:#aaa;"></br>
     <h3>Introduction</h3>
     <p>I am Amrit Sagar Khanal, a junior software</br>
          developer currently enrolled at Coder </br>Academy.
@@ -74,7 +74,7 @@
                                             
   </div>
   
-  <div class="column" style="background-color:#bbb;">
+  <div class="column" style="background-color:#bbb;"></br>
         <h4>BACKGROUND</h4>
         <p>I am an electronics and communication </br>
            enginer who graduated from Tribhuvan</br>
@@ -84,7 +84,7 @@
             College, Australia.
        </p>
       </div>
-      <div class="column" style="background-color:#bbb;">
+      <div class="column" style="background-color:#bbb;"></br>
             <h4>Qualification and Work Experience</h4>
             <p>B.E (Elx and Comm): Tribhuvan University</br>
                Master in Business & Project Mgmt: APIC</br>
