Minor changes in the pages

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   </div> -->
             <div class="container2">
                     <div class="image2">
-                      <img src="docs/cimage.png" alt="image" width="600" height="600">
+                      <img src="docs/cimage4.png" alt="image" width="600" height="600">
                     </div>
                     <div class="main" width="300" height="600">
                             <p></br></br></br>
