--- a/src/contacts.html
+++ b/src/contacts.html
@@ -9,7 +9,7 @@
         <STYLE>A {text-decoration: none;} </STYLE>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
-        
+        <title>portfolio</title>
 </head>
 
 <body>
