--- a/src/contacts.html
+++ b/src/contacts.html
@@ -64,10 +64,13 @@
                     <div class="contact"><a href="mailto:amritsk1@yahoo.com"><i class="fa fa-fw fa-yahoo" style="font-size: 3.73em"></i> </a>
                     </div>
                 
-                    <div class="contact"><a href="https://www.twitter.com/AmritSKhanal1"><i class="fa fa-fw fa-twitter"style="font-size: 3.73em";></i> </a>
+                    <div class="contact"><a href="https://www.twitter.com/AmritSKhanal1"><i class="fa fa-fw fa-twitter"style="font-size: 3.73em"></i> </a>
 
                     </div>
-                    <div class="contact"><a href="https:www.linkedin.com/in/amrit-sagar-khanal-473b57199"><i class="fa fa-fw fa-linkedin" style="font-size: 3.73em"></i></a>
+                    <!-- <div class="contact"><a href="https:www.linkedin.com/in/amrit-sagar-khanal-473b57199"><i class="fa fa-fw fa-linkedin" style="font-size: 3.73em"></i></a>
+                    </div> -->
+                    <div class="contact"><a href="https://www.twitter.com/AmritSKhanal1"><i class="fa fa-fw fa-twitter"style="font-size: 3.73em"></i> </a>
+
                     </div>
                     <div class="contact"><a href="https://www.facebook.com/amrit.s.khanal"><i class="fa fa-fw fa-facebook" style="font-size: 3.73em"></i></a>
                     </div>
