edited some code

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -41,7 +41,7 @@
                     <div class="contact"><a href="https://www.twitter.com/AmritSKhanal1"><i class="fa fa-fw fa-twitter"style="font-size: 3.73em"></i> </a>
 
                     </div>
-                    <div class="contact"><a href="https:www.linkedin.com/in/amrit-sagar-khanal-473b57199"><i class="fa fa-fw fa-linkedin" style="font-size: 3.73em"></i></a>
+                    <div class="contact"><a href="https://www.linkedin.com/in/amrit-sagar-khanal-473b57199"><i class="fa fa-fw fa-linkedin" style="font-size: 3.73em"></i></a>
                     </div>
                     
                     <div class="contact"><a href="https://www.facebook.com/amrit.s.khanal"><i class="fa fa-fw fa-facebook" style="font-size: 3.73em"></i></a>
