Finlal changes commited

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="../styles.css" integrityy="sha512-fr6ZwiyJbv2kE9/q8DvoEuNxS9Ocib5eEzx0d5g9DGxb1ohP6xcLhEkpAKYvg20U3zbeHl/oHFjChHtqD6Ak/Q=="/>
         <STYLE>A {text-decoration: none;} </STYLE>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <title>portfolio</title>
+        <title>CONTACTS</title>
 </head>
 
 <body>
@@ -47,6 +47,7 @@
                     <div class="contact"><a href="https://www.facebook.com/amrit.s.khanal"><i class="fa fa-fw fa-facebook" style="font-size: 3.73em"></i></a>
                     </div>
 
-                </body>  
+                </body> 
+               
             
 </html>              
