some modifications done

--- a/src/contacts.html
+++ b/src/contacts.html
@@ -46,6 +46,7 @@
                     
                     <div class="contact"><a href="https://www.facebook.com/amrit.s.khanal"><i class="fa fa-fw fa-facebook" style="font-size: 3.73em"></i></a>
                     </div>
+                    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
                 </body> 
                
