Portfolio upgraded successfully

--- a/src/personal-details.html
+++ b/src/personal-details.html
@@ -69,7 +69,7 @@
       <p>B.E (Elx and Comm): Tribhuvan University</br>
          Master in Business & Project Mgmt: APIC</br>
          Curently: Diploma of IT, Coder Academy</br>
-         LEcturer: Kathmandu Engg College, Nepal</br>
+         Lecturer: Kathmandu Engg College, Nepal</br>
          Dept of Electronics Engineering
   
       </p> 
