Heading changed in Home Page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li class="dropdown">
             <li><a href="./src/personal-details.html">About</a></li>
             <li><a href="./src/blogs.html">Blogs</a></li>
-            <li><a href="./src/projects.html">Skills/Projects</a></li>
+            <li><a href="./src/projects.html">Skills & Projects</a></li>
             <li><a href="./src/contacts.html">Contact</a></li>
         </ul>        
       </div>
@@ -49,11 +49,11 @@
   <!-- CODE FOR BRIEF INTRODUCTION        -->
   <div class="container2">              
     <div class="main" width="300" height="600">
-      <p></br></br></br>
-        Amrit sagar Khanal</br></br>
-        Junior Software Developer</br></br>
-        Languages: JavaScript (MERN Stack),  Ruby, python, c ,c++, Assembly language programming,</br></br>
-        Background: Web Application Developer/Electronics and Communication Engineer</br></br>
+      <p>
+        Amrit sagar Khanal</br>
+        Junior Software Developer</br>
+        Languages: JavaScript (MERN Stack),  Ruby, python, c ,c++, Assembly language programming,</br>
+        Background: Web Application Developer/Electronics and Communication Engineer</br>
         My details, contacts, blogs and qualification can be visited by clicking the link on the navigation bar.
 
       </p>            
