--- a/src/projects.html
+++ b/src/projects.html
@@ -22,7 +22,7 @@
   </header>
   <!-- CODE FOR NAVIGATION BAR AT THE TOP -->
   <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
+    <div class="container3-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
           <span class="icon-bar"></span>
@@ -44,11 +44,14 @@
   </nav>
   <body>            
      <!-- CODE FOR PROJECTS COMPLETED      -->
-     <p>As a junior programmer, my first project is a terminal application  "Quiz" and this application allowsa user to test his/her ability in ruby programming via multiple choice questions.The application has twomodes: practice mode and tournament mode. Some screenshots of the terminal application has been presented 
-      here. The project can be viewed and run as per the link below:</p>
-   <div class="contactgit"><a href="https://www.github.com/amrithub/t1project">Quiz</a>
-   </div>
-   <div class="container">
+     <div class="p3"><p>As a junior programmer, my first project was  a terminal application  "Quiz" and the other one was "Car Marketplace application" </p></div>
+       
+   <div class="contactgit"><a href="https://www.github.com/amrithub/t1project">Quiz</a></div>
+    <div class="p3">The "Quiz" application allows a user to test his/her ability in ruby programming via multiple choice questions.The application has two modes: practice mode and tournament mode. Some screenshots of the terminal application has been presented 
+      here. The project can be viewed and run as per the link below:</div>
+   
+   <!-- Screenshots of the different modes and stages of the termainal application -->
+   <div class="container3">
       <div class="image">
         <img src="../docs/output1.png" alt="Trulli" width="400" height="400">
       </div>
@@ -56,8 +59,8 @@
         <p>The welcome page allows the user to enter his/her name eitehr by command line or while the program runs. </p>
       </div>
    </div>
-   </br> </br> </br>
-   <div class="container">
+   
+   <div class="container3">
       <div class="image">
         <img src="../docs/output3.png" alt="Trulli" width="400" height="400">
       </div>
@@ -65,22 +68,78 @@
         <p>This mode allows the user to choose one of practice mode or tournament mode. </br> The user chooses practice mode here</p>
       </div>
    </div>
-   </br> </br> </br>
-   <div class="container">
+   
+   <div class="container3">
       <div class="image">
-       <img src="../docs/output4.png" alt="Trulli" width="400" height="400"">
+       <img src="../docs/output4.png" alt="Trulli" width="400" height="400">
       </div>
       <div class="main">
         <p>The screenshot shows the tournamnet  mode where the number of questions is 5.</p>
       </div>
    </div>
-   <div class="container">
+   <div class="container3">
      <div class="image">
        <img src="../docs/output5.png" alt="Trulli" width="400" height="400" />
      </div>
      <div class="main">
           <p>The screenshot shows the output score and other status after the completion of tournament mode.</p>
      </div>
-   </div>                  
+   </div> 
+   <div class="contactgit"><a href="https://github.com/amrithub/salty-thicket-25256">Car marketspace</a>
+   <!--Screenshots of different pages of the marketplace application-->
+   <p>This marketspace is coded in Ruby on Rails on the server side and html/css the client side, PostGreSql for database. A user can register, login, post a car and purchase 
+     a car posted by other users. It is a responsive design. User authentication has been implemented too.
+   </p>
+   
+   <div class="container3">
+    <div class="image">
+      <img src="../docs/index.png" alt="Trulli" width="400" height="400" />
+
+    </div>  
+    <div class="main">
+         <p>This is the homepage of the marketplace application.</p>
+    </div>
+   </div> 
+  
+   <div class="container3">
+    <div class="image">
+      <img src="../docs/lm.png" alt="Trulli" width="400" height="400" />
+    </div>
+    <div class="main">
+         <p>This is the login page for the registered users of the marketplace application.</p>
+    </div>
+   </div>  
+   <div class="container3">
+    <div class="image">
+      <img src="../docs/mform.png" alt="Trulli" width="400" height="400" />
+    </div>
+    <div class="main">
+         <p>This is a form page for posting a new car on  the marketplace application.</p>
+    </div>
+   </div>  
+   <div class="container3">
+    <div class="image">
+      <img src="../docs/mshow.png" alt="Trulli" width="400" height="400" />
+    </div>
+    <div class="main">
+         <p>This is the details of a posted car on  the marketplace application.</p>
+    </div>
+   </div>  
+   <div class="container3">
+    <div class="image">
+      <img src="../docs/payd.png" alt="Trulli" width="400" height="400" />
+    </div>
+    <div class="main">
+         <p>This is payment page  to buy the car posted in the car market space</p>
+    </div>
+   </div>    
+   <div class="container3">
+    <div class="image">
+      <img src="../docs/paysuc.png" alt="Trulli" width="400" height="400" />
+    </div>
+    <div class="main">
+         <p>This is the page that verifies that the payment has been successful</p>
+    </div>
+   </div>               
   </body>                  
 </html>              
