Heading changed in Home Page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="index.html">Home</a></li>
           <li class="dropdown">
-            <li><a href="./src/personal-details.html">About</a></li>
+            <li><a href="./src/personal-details.html">About Me</a></li>
             <li><a href="./src/blogs.html">Blogs</a></li>
             <li><a href="./src/projects.html">Skills & Projects</a></li>
             <li><a href="./src/contacts.html">Contact</a></li>
