--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li><a href="./src/personal-details.html">About Me</a></li>
             <li><a href="./src/blogs.html">Blogs</a></li>
             <li><a href="./src/projects.html">Skills & Projects</a></li>
-            <li><a href="./src/contacts.html">Contact</a></li>
+            <li><a href="./src/contacts.html">Contacts</a></li>
         </ul>        
       </div>
     </div>
