--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li class="dropdown">
             <li><a href="./src/personal-details.html">About Me</a></li>
-            <li><a href="./src/blogs.html">Blogs</a></li>
+            <!-- <li><a href="./src/blogs.html">Blogs</a></li> -->
             <li><a href="./src/projects.html">Skills & Projects</a></li>
             <li><a href="./src/contacts.html">Contacts</a></li>
         </ul>        
